# Autonomous-AI-Employee-Silver-Tier

./: .gitignore  CLAUDE.md  README.md  email_config.json  email_sender_mcp.py  gmail_sender.py  health_check.py  linkedin_automation.py  process_manager.py  pyproject.toml  requirements.txt  start_ai_employee.bat  start_ai_employee.sh
.claude/: settings.local.json
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md  Weekly_Status_Report_Template.md
AI_Employee_Vault/Accounting/: 2026-03-08_transactions.md
AI_Employee_Vault/Approved/: APPROVAL_LINKEDIN_AI_EMPLOYEE_2026-03-10.md  APPROVAL_invoice_acme_corp_20260308.md
AI_Employee_Vault/Done/: DRAFT_invoice_email_acme_corp_20260308.md  DRAFT_test_tayyaba_20260310.md  DRAFT_validation_test_20260310.md  EXAMPLE_welcome_task.md  FILE_invoice_acme_corp_20260308_221334_20260308_221334.md  FILE_q1_business_report_20260308_221134_20260308_221134.md  FILE_weekly_status_report_20260308_221940_20260308_221940.md  LINKEDIN_POST_2026-03-10_POSTED.md
AI_Employee_Vault/Drop_Folder/: demo_test_20260308_220617.txt  invoice_acme_corp_20260308_221334.txt  q1_business_report_20260308_221134.txt  test_task.txt  weekly_status_report_20260308_221940.txt
AI_Employee_Vault/LinkedIn_Posts/: 2026-03-10-post.txt  ai_employee_showcase.txt  funny_test_post.txt
AI_Employee_Vault/Logs/: emails_sent_mcp.md  linkedin_post_log.md
AI_Employee_Vault/Plans/: PLAN_invoice_acme_corp_20260308.md  (+3 more)
mcp_servers/: gmail_server.py
watchers/: __init__.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py
(+16 files in other folders)
